tket2-hseries/src/llvm/snapshots/tket2_hseries__llvm__result__test__emit_result_codegen@pre-mem2reg@llvm14_4.snap
---
source: tket2-hseries/src/llvm/result.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@res_test_f64.A24BDAE1.0 = private constant [20 x i8] c"\13USER:FLOAT:test_f64"

define void @_hl.main.1(double %0) {
alloca_block:
  %"2_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store double %0, double* %"2_0", align 8
  %"2_01" = load double, double* %"2_0", align 8
  %tag_len = load i8, i8* getelementptr inbounds ([20 x i8], [20 x i8]* @res_test_f64.A24BDAE1.0, i32 0, i32 0), align 1
  %tag_len2 = zext i8 %tag_len to i64
  call void @print_float(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @res_test_f64.A24BDAE1.0, i32 0, i32 0), i64 %tag_len2, double %"2_01")
  ret void
}

declare void @print_float(i8*, i64, double)
